fix(segmented-button): adding fixes for font-size on parent causing layout shift.

--- a/packages/web-components/src/components/rux-segmented-button/rux-segmented-button.scss
+++ b/packages/web-components/src/components/rux-segmented-button/rux-segmented-button.scss
@@ -1,6 +1,7 @@
 :host {
     display: block;
     box-sizing: border-box;
+    font-size: var(--font-size-base); //fixes issue where parent element with larger font-size causes layout shift.
 }
 
 :host([disabled]) {
